# PhoneSnap

./: .gitignore  CONTRIBUTING.md  LICENSE  Package.swift  README.md  ROADMAP.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  scorecard.yml  semgrep.yml
Resources/: PhoneSnap.icns
Sources/ICProbe/: main.swift
Sources/PhoneSnap/: ADBDevice.swift  ADBProcessRunner.swift  AndroidADBBridge.swift  AppDelegate.swift  CameraBridge.swift  ImageStore.swift  LANAddress.swift  Log.swift  StatusItemController.swift  ThumbnailPresenter.swift  ThumbnailView.swift  ThumbnailWindowController.swift  WirelessBatchPresenter.swift  WirelessPairing.swift  WirelessReceiver.swift  WirelessSetupWindowController.swift  WirelessShortcutGenerator.swift  main.swift
Sources/ScreenshotCatch/: AppDelegate.swift  CameraBridge.swift  HTTPListener.swift  ImageStore.swift  LANAddress.swift  LocalHostName.swift  Log.swift  PairingWindow.swift  Pasteboard.swift  ShortcutGenerator.swift  StatusItemController.swift  ThumbnailView.swift  ThumbnailWindowController.swift
Sources/UsbmuxdProbe/: main.swift
docs/: ANDROID_SETUP.md  ARCHITECTURE.md  CHOSEN_APPROACH.md  DEV_SENDERS.md  IPHONE_SETUP.md  OPTIONS_COMPARISON.md  PROTOCOL.md  RESEARCH.md  TEST_PLAN.md  WINDOWS_RESEARCH.md  WIRELESS.md
receivers/windows/: README.md  (+3 more)
scripts/: build-app.sh  generate-readme-assets.swift  make-sample.sh  probe.sh  smoke-test.sh
tools/windows/WpdProbe/: CMakeLists.txt  README.md  main.cpp
(+63 files in other folders)
